k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend
spec:
  type: ClusterIP
  selector:
    app: ecommerce-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
